# spring4shell-scanner

./: Cargo.toml  readme.md  targets.lst
.github/workflows/: release.yml  test-commit.yml
src/: main.rs
