[package]
name = "spring4shell-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#async-std = { version = "1.11", features = ["attributes"] }
#surf = { version = "2.3.2", features = ["h1-client-rustls"]}
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
#reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"]}
reqwest = { version = "0.11", default-features = false, features = ["native-tls"]}

futures = "0.3"
log = "0.4.0"
env_logger = "0.8.4"

